import "Magma.proto";

package Projects;

option java_package = "org.obiba.opal.web.model";

message ProjectDto {
  required string name = 1;
  required string title = 2;
  optional string description = 3;
  optional Magma.DatasourceDto datasource = 4;
  repeated string tags = 5;
  optional string link = 6;
  optional string directory = 7;
  optional bool archived = 8 [default = false];
  optional string database = 9;
  optional Magma.TimestampsDto timestamps = 10;
  optional string vcfStoreService = 11;
  optional GenotypesMappingDto genotypesMapping = 12;
}

message ProjectFactoryDto {
  required string name = 1;
  optional string title = 2;
  optional string description = 3;
  optional string database = 4;
  repeated string tags = 5;
  optional string vcfStoreService = 6;
  optional GenotypesMappingDto genotypesMapping = 7;
}

message GenotypesMappingDto {
  required string projectName = 1;
  required string tableName = 2;
  required string participantIdVariable = 3;
  required string sampleIdVariable = 4;
  required string sampleRoleVariable = 5;
}

message GenotypesSummaryDto {
  optional int64 participants = 1;
  optional int64 participantsWithGenotype = 2;
  optional int64 samples = 3;
  optional int64 controlSamples = 4;
}

message ProjectSummaryDto {
  required string name = 1;
  required int32 tableCount = 2;
  required int32 variableCount = 3;
  required int32 entityCount = 4;
  optional Magma.TimestampsDto timestamps = 5;
}